fixed misisng gap

--- a/src/demos/todomvc/index.scss
+++ b/src/demos/todomvc/index.scss
@@ -111,7 +111,7 @@
 }
 
 .m-todo__label {
-  margin: 0;
+  margin: 0 20px 0 0;
 
   flex: 1;
 
